--- a/src/scss/_menu.scss
+++ b/src/scss/_menu.scss
@@ -2,7 +2,6 @@
   header {
     nav {
       background-color: $ColorFondo;
-      // display: flex;
       ul li,
       .dropdown {
         margin-right: 10px;
@@ -28,7 +27,7 @@
       .active::before {
         content: "";
         position: absolute;
-        border: solid 2px $ColorMenu;
+        border: solid 2px $ColorLogo;
       }
       .active::after {
         left: 10px;
@@ -50,7 +49,7 @@
       form {
         input[type="search"] {
           border-radius: 0px 0px 0px 0px;
-          background-color: #000;
+          background-color: #f6f6f6;
           border: none;
           color: $ColorMenu;
           border-left: 5px solid $SeparadorSearch;
@@ -71,7 +70,7 @@
       display: inline-block;
     }
     .dropdown-menu {
-      background-color: transparent;
+      background-color: $ColorFondo;
       min-width: 160px;
       box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     }
